// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    20.00 Rs.
  </h2>
</div>
`;

exports[`should correctly render expenses summary with multiple expense 1`] = `
<div>
  <h2>
    Viewing 
    7
     
    expenses
     totalling 
    28923.34 Rs.
  </h2>
</div>
`;
